    - Allow pass-through of username and password for X2Go-proxied RDP
      sessions. The strings X2GO_USER and X2GO_PASSWORD in rdpoptions
      will be replaced by username+password enter into X2Go Clients
      login dialog. Only replace username+password if they received a
      value from the login widget of the main window.
    - Drop i18n idea to translate English to English.
  * /debian/control:
    + Maintainer change in package: X2Go Developers <x2go-dev@lists.berlios.de>.
    + Add rdesktop and xfreerdp to Recommends.
    + Priority: optional.

  [ Daniel Lindgren ]
  * New upstream version (3.99.3.0):
    - Update Swedish translation.

  [ Terje Andersen ]
  * New upstream version (3.99.3.0):
    - Update Norwegian Bokmal translation.

  [ Christoffer Krakou ]
  * New upstream version (3.99.3.0):
    - Add Danish translation to x2goclient.
    - Proof read Danish translation.
    - Update DirectRDP in Danish translation.

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.3.0):
    - Add settings for direct RDP connection.
    - Implement direct RDP connection using standalone client.
    - Build direct RDP feature only for linux.
    - Add DEFINES += __linux__ to project file when building linux binaries
      (need to define Q_OS_LINUX in moc generator).
    - Update "ts" files.
    - Fixed label "SSH port" and "RDP port" to "SSH port:" and "RDP port:".
      Update "ts" files once again.
    - Add translation for label "RDP port:". Update "ts" files updated
      Russian translation.
    - Add translation for checkbox "Direct RDP Connection" and update Russian
      and German translation.
    - Restart pulse server on windows if it crashed.
    - Show "Advanced Options" button only if RDP session chosen
    - Fixing kbd focus issue for all kinds of sessions in thinclient mode 

  [ Ricardo Diaz ]
  * New upstream version (3.99.3.0):
    - Add Spanish translation file.
