@@ -13,6 +13,10 @@ x2goclient (3.99.3.0-0~x2go1) UNRELEASED; urgency=low
       login dialog. Only replace username+password if they received a
       value from the login widget of the main window.
     - Drop i18n idea to translate English to English.
+    - Fix creation of session profile icon on desktop. The .desktop
+      files need the x-bit set. Also: add a compatibility profile name
+      rewrite for PyHoca-GUI profile names containing a slash, PyHoca-GUI
+      uses a slash as separator character for submenu cascades.
   * /debian/control:
     + Maintainer change in package: X2Go Developers <x2go-dev@lists.berlios.de>.
     + Add rdesktop and xfreerdp to Recommends.
